--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
         * {
             font-family: 'Jua', sans-serif;
         }
+
         .wrap {
             width: 300px;
             margin: auto;
@@ -18,11 +20,18 @@
             padding: 20px;
             border: 1px solid black;
         }
+
         .m-t-10 {
             margin-top: 10px;
         }
+
         .m-t-20 {
             margin-top: 20px;
+        }
+
+        .btn {
+            width: 300px;
+            cursor: pointer;
         }
     </style>
     <script>
@@ -32,38 +41,40 @@
 
             $.ajax({
                 type: 'POST',
-                url: '/api/signup',
+                url: '/users/signup',
                 data: { id: id, pw: pw },
                 dataType: "json",
                 success: function (response) {
 
                     console.log(response.data);
-                    
+
                     if (response.data == 'NO') {
                         alert('이미 존재하는 아이디입니다.');
                     } else {
                         // 로그인으로 이동
-                        // 아니면 바로 로그인해서 메인으로
+                        location.href = '/login';
                     }
                 }
             });
         }
     </script>
 </head>
+
 <body>
     <div class="wrap">
         회원가입
         <div class="m-t-20">
             <label>아이디:</label>
-            <input type="text" id="id"/>
+            <input type="text" id="id" />
         </div>
         <div class="m-t-10">
             <label>비밀번호:</label>
-            <input type="password" id="pw"/>
+            <input type="password" id="pw" />
         </div>
         <div class="m-t-20">
-            <button onclick="signup()">Sign Up</button>
+            <button class="btn" onclick="signup()">Sign Up</button>
         </div>
     </div>
 </body>
+
 </html>
