--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,20 +29,30 @@
             margin-top: 20px;
         }
 
+        input {
+            width: 300px;
+            height: 30px;
+            box-sizing: border-box;
+        }
+
         .btn {
             width: 300px;
+            height: 30px;
             cursor: pointer;
+            background-color: lightgray;
+            border: none;
         }
     </style>
     <script>
         function signup() {
+            var name = $('#name').val();
             var id = $('#id').val();
             var pw = $('#pw').val();
 
             $.ajax({
                 type: 'POST',
                 url: '/users/signup',
-                data: { id: id, pw: pw },
+                data: { name: name, id: id, pw: pw },
                 dataType: "json",
                 success: function (response) {
 
@@ -62,17 +72,18 @@
 
 <body>
     <div class="wrap">
-        회원가입
-        <div class="m-t-20">
-            <label>아이디:</label>
-            <input type="text" id="id" />
+        <h1>Sign Up</h1>
+        <div>
+            <input type="text" id="name" placeholder="이름" />
         </div>
         <div class="m-t-10">
-            <label>비밀번호:</label>
-            <input type="password" id="pw" />
+            <input type="text" id="id" placeholder="이메일" />
         </div>
-        <div class="m-t-20">
-            <button class="btn" onclick="signup()">Sign Up</button>
+        <div class="m-t-10">
+            <input type="password" id="pw" placeholder="비밀번호" />
+        </div>
+        <div class="m-t-10">
+            <button class="btn" onclick="signup()">회원가입</button>
         </div>
     </div>
 </body>
