1. 구글 자동로그인 수정(구글은 localhost로)

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -112,13 +112,13 @@
         }
 
         function facebookLogin() {
-            alert('개발중입니다.');
-            //location.href = '/users/facebooklogin';
+            //alert('개발중입니다.');
+            location.href = '/users/facebooklogin';
         }
 
         function googleLogin() {
-            alert('개발중입니다.');
-            //location.href = '/users/googlelogin';
+            //alert('개발중입니다.');
+            location.href = '/users/googlelogin';
         }
     </script>
 </head>
