--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         }
 
         .wrap {
-            visibility: hidden;
+            /* visibility: hidden; */
             width: 300px;
             margin: auto;
             text-align: center;
@@ -62,12 +62,12 @@
         }
 
         .facebook-login-btn {
-            background-color: blue;
+            background-color: rgb(53, 96, 175);
             color: white;
         }
 
         .google-login-btn {
-            background-color: red;
+            background-color: rgb(209, 71, 71);
             color: white;
         }
         .signup {
@@ -76,6 +76,11 @@
     </style>
     <script>
         $(function () {
+            getJWT();
+            // getSession();
+        })
+
+        function getJWT() {
             $.ajax({
                 type: 'GET',
                 url: '/users/getJWT',
@@ -97,7 +102,31 @@
                     }
                 }
             });
-        })
+        }
+
+        function getSession() {
+            $.ajax({
+                type: 'GET',
+                url: '/users/getSession',
+                dataType: 'json',
+                success: function (response) {
+                    
+                    console.log(response.data);
+                    
+                    if (response.data == 'NO') {
+                        $('.wrap').css('visibility', 'visible');
+
+                    } else if (response.data == 'INCORRECT') {
+                        alert('세션에 존재하는 유저는 이미 삭제된 유저입니다. 쿠키를 지워주세요.');
+                        $('.wrap').css('visibility', 'visible');
+
+                    } else {
+                        // 메인으로 이동
+                        location.href='/welcome';
+                    }
+                }
+            });
+        }
 
         function goSignUp() {
             location.href = '/signup';
@@ -112,12 +141,10 @@
         }
 
         function facebookLogin() {
-            //alert('개발중입니다.');
             location.href = '/users/facebooklogin';
         }
 
         function googleLogin() {
-            //alert('개발중입니다.');
             location.href = '/users/googlelogin';
         }
     </script>
@@ -128,7 +155,7 @@
         <h1>LOGIN</h1>
         <form action="/users/emaillogin" method="post">
             <div>
-                <input type="text" name="id" placeholder="이메일"/>
+                <input type="text" name="email" placeholder="이메일"/>
             </div>
             <div class="m-t-10">
                 <input type="password" name="pw" placeholder="비밀번호"/>
