--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,20 +46,20 @@
     <script>
         function signup() {
             var name = $('#name').val();
-            var id = $('#id').val();
+            var email = $('#email').val();
             var pw = $('#pw').val();
 
             $.ajax({
                 type: 'POST',
                 url: '/users/signup',
-                data: { name: name, id: id, pw: pw },
+                data: { name: name, email: email, pw: pw },
                 dataType: "json",
                 success: function (response) {
 
                     console.log(response.data);
 
                     if (response.data == 'NO') {
-                        alert('이미 존재하는 아이디입니다.');
+                        alert('이미 가입한 사용자입니다.');
                     } else {
                         // 로그인으로 이동
                         location.href = '/login';
@@ -77,7 +77,7 @@
             <input type="text" id="name" placeholder="이름" />
         </div>
         <div class="m-t-10">
-            <input type="text" id="id" placeholder="이메일" />
+            <input type="text" id="email" placeholder="이메일" />
         </div>
         <div class="m-t-10">
             <input type="password" id="pw" placeholder="비밀번호" />
